--- a/styles/styles-memoryCards.css
+++ b/styles/styles-memoryCards.css
@@ -6,71 +6,62 @@
 }
 
 body{
-  background-color: #f6c85f;
-  padding: 40px 80px;
+  background-color:	#faefae;
+  /* padding: 40px 80px;   */
 }
 
 h1{
-  color: #6f4e7c;
+  color: #8b2138;  
+  font-size: 80px;
+  margin-top: 230px;
   text-align: center;
-  font-size: 50px;
-  margin-bottom: 30px;  
+  transition: font-size 1s; 
+  transition-delay: 0;
+  transition-timing-function: linear;
 }
 
-p{
+h1:hover{
+  font-size: 100px;
+}
+
+/* p{
   color: #444444;
   font-size: 22px;
   text-align: center;
   line-height: 120%;
-}
+} */
 
 .board{
-  display: flex;
-  gap: 200px;
-  margin-top: 30px;
-}
-
-.deck-board{
-  display: flex;
-  gap: 30px;
-  margin-top: 20px;
-
-}
-
-.deck-board > div{
-  display: flex;
-  width: 150px;
-  height: 231px;
-  background-color: #0b84a5;
-  border-radius: 20px;
+  display: flex;  
+  width: 1000px;
+  height: 100vh;
+  margin: auto;
+  gap: 10px;
+  column-gap: 10px;  
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
   
 }
 
-.deck-board > div img{
+.board > div{
+  display: flex;
+  width: 140px;
+  height: 215px;
+  background-color: #0095bd;
+  border-radius: 20px; 
+}
+
+.board > div img{
   width: 100%;
   border-radius: 20px;
-  border: 6px solid #0b84a5;
+  border: 4px solid #0095bd;
 }
 
-
-.flip-board{
-  display: flex;
-  gap: 30px;
-  margin-top: 20px;
+.visible{
+  display: block;
 }
 
-.flip-board > div{
-  display: flex;
-  width: 220px;
-  height: 338px;
-  background-color: #0b84a5;
-  border-radius: 20px;
+.hidden{
+  display: none;
 }
-
-.flip-board > div img{
-  width: 100%;
-  border-radius: 20px;
-  border: 6px solid #0b84a5;
-}
-
-
