--- a/styles/styles-memoryCards.css
+++ b/styles/styles-memoryCards.css
@@ -6,13 +6,12 @@
 }
 
 body{
-  background-color:	#faefae;
-  /* padding: 40px 80px;   */
+  background-color:	#faefae;  
 }
 
 h1{
   color: #8b2138;  
-  font-size: 80px;
+  font-size: 100px;
   margin-top: 230px;
   text-align: center;
   transition: font-size 1s; 
@@ -21,15 +20,27 @@ h1{
 }
 
 h1:hover{
-  font-size: 100px;
+  font-size: 150px;
 }
 
-/* p{
-  color: #444444;
-  font-size: 22px;
+a{
+  text-decoration: none;
+}
+
+p{
+  color: #595e5d;
+  font-size: 40px;
   text-align: center;
   line-height: 120%;
-} */
+  margin-bottom: 20px;
+}
+
+h2{
+  color: #8b2138;
+  font-size: 60px;  
+  line-height: 120%;
+  margin-bottom: 20px;
+}
 
 .board{
   display: flex;  
@@ -47,9 +58,8 @@ h1:hover{
 .board > div{
   display: flex;
   width: 140px;
-  height: 215px;
-  background-color: #0095bd;
-  border-radius: 20px; 
+  height: 215px;  
+  border-radius: 20px;   
 }
 
 .board > div img{
@@ -65,3 +75,39 @@ h1:hover{
 .hidden{
   display: none;
 }
+
+.flip .visible{
+  display: none;
+}
+
+.flip .hidden{
+  display: block;
+}
+
+.turnoff .visible{
+  display: none;
+}
+
+.turnoff .hidden{  
+  display: none;
+}
+
+.counter{
+  text-align: center;
+  margin: auto;
+  margin-top: 120px;
+}
+
+.counter div{
+  height: 65px;
+  width: 250px;
+  line-height: 65px;
+  color: 	#ffffff;
+  background-color: #0095bd;
+  border: 1px solid #0095bd;
+  border-radius: 15px;
+  margin: auto;
+  font-size: 30px;
+  text-transform: uppercase;
+}
+
